clusters/prod/apps/trading/deployment-data-ingestion.yaml
---
# Data Ingestion Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-ingestion
  namespace: trading
  labels:
    app: data-ingestion
    app.kubernetes.io/part-of: algo-trading-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-ingestion
  template:
    metadata:
      labels:
        app: data-ingestion
    spec:
      imagePullSecrets:
      - name: docker-hub-creds
      containers:
      - name: data-ingestion
        image: docker.io/sudhan03/algo-trading:data-ingestion-58b08be
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /app/config
        resources:
          requests:
            memory: "4Gi"
            cpu: "2000m"
          limits:
            memory: "32Gi"
            cpu: "8000m"
      volumes:
      - name: config
        configMap:
          name: trading-config
