clusters/prod/apps/trading/deployment-order-executor.yaml
---
# Order Executor
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-executor
  namespace: trading
  labels:
    app: order-executor
    app.kubernetes.io/part-of: algo-trading-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-executor
  template:
    metadata:
      labels:
        app: order-executor
    spec:
      imagePullSecrets:
      - name: docker-hub-creds
      containers:
      - name: order-executor
        image: docker.io/sudhan03/algo-trading:order-executor-05fe9c8
        imagePullPolicy: Always
        volumeMounts:
        - name: config
          mountPath: /app/config
        resources:
          requests:
            memory: "1Gi"
            cpu: "750m"
          limits:
            memory: "2Gi"
            cpu: "1500m"
      volumes:
      - name: config
        configMap:
          name: trading-config
