clusters/prod/apps/trading/deployment-portfolio-tracker.yaml
---
# Portfolio Tracker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-tracker
  namespace: trading
  labels:
    app: portfolio-tracker
    app.kubernetes.io/part-of: algo-trading-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-tracker
  template:
    metadata:
      labels:
        app: portfolio-tracker
    spec:
      imagePullSecrets:
      - name: docker-hub-creds
      containers:
      - name: portfolio-tracker
        image: docker.io/sudhan03/algo-trading:portfolio-tracker-ec87446
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /app/config
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: config
        configMap:
          name: trading-config
