clusters/prod/apps/trading/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: trading
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - trading.sudharsana.dev
    secretName: dashboard-tls
  rules:
  - host: trading.sudharsana.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ops-dashboard
            port:
              number: 8501
